<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#A9FF91"
    android:foregroundGravity="center_vertical|center"
    tools:context=".Game_Select">

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="152dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/text2"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Game1"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="50dp"
        android:text="@string/sGame1_1s"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Game2"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="50dp"
        android:text="@string/sGame2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game1" />

    <Button
        android:id="@+id/Game3"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="50dp"
        android:text="@string/sGame3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game2" />

    <Button
        android:id="@+id/Game4"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="50dp"
        android:text="@string/sGame4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game3" />

    <Button
        android:id="@+id/back_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Redo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game4" />

</androidx.constraintlayout.widget.ConstraintLayout>